# foodspring

./: .gitignore  README.md  foodspring_products.xlsx  pyproject.toml
src/foodspring/: crawler.py
