[project]
name = "foodspring"
version = "0.1.0"
description = ""
authors = [
    {name = "chk386",email = "chk386@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.38.0,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "foodspring", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
